# prepare

./: pyproject.toml
books/: admin.py  models.py  urls.py  views.py
books/migrations/: 0001_initial.py
books/templates/books/: base.html  index.html
config/: settings.py  urls.py
polls/: admin.py  urls.py  views.py
polls/migrations/: 0001_initial.py
polls/templates/polls/: about.html  detail.html  index.html  results.html
