[tool.poetry]
name = "prepare"
version = "0.1.0"
description = ""
authors = ["wonjangcloud9 <48057918+wonjangcloud9@users.noreply.github.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
Django = "^4.1.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
